[tool.poetry]
name = "stacked-quantile"
version = "0.1.0"
description = ""
authors = ["Shay Hill <shay_public@hotmail.com>"]
readme = "README.md"
packages = [{include = "stacked_quantile", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
commitizen = "^2.39.1"
pre-commit = "^2.21.0"
tox = "^4.3.4"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py,**/tests/**"]

pythonVersion = "3.10"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "C:\\Users\\shaya\\AppData\\Local\\pypoetry\\Cache\\virtualenvs"
venv = "C:\\Users\\shaya\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\stacked-quantile-SmjejOwy-py3.11"
