[project]
name = "stacked-quantile"
version = "0.5.0"
description = "Get weighted median values, treating weights as the number of occurrences of a given value."
readme = "README.md"
license = "MIT"
authors = [{ name = "Shay Hill", email = "shay_public@hotmail.com" }]
requires-python = ">=3.10"
dependencies = ["numpy>=2.0.2"]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["commitizen>=4.10.1", "pre-commit>=4.3.0", "pytest>=8.4.2"]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"
tag-format = "$version"
major-version-zero = true
version_files = ["pyproject.toml:^version"]


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = "tests"
log_cli = true


[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",
    "D",
    "F401",
] # Ignore assertions, docstrings, unused imports in test files

[tool.ruff.format]
docstring-code-line-length = 88

[tool.ruff.lint]

select = ["ALL"]

ignore = [
    "PLR", # magic values
    "COM", # trailing commas
    "ANN", # forbid Any
]


[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.10"
pythonPlatform = "All"

typeCheckingMode = "strict"
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./.venv"
